@@ -12,6 +12,10 @@
     .col-sm-10
       = f.text_field :title, class: "form-control js-quick-submit", required: true, autofocus: true
   .form-group
+    = f.label :description, class: 'control-label'
+    .col-sm-10
+      = f.text_field :description, class: "form-control js-quick-submit"
+  .form-group
     = f.label :color, "Background color", class: 'control-label'
     .col-sm-10
       .input-group
