@@ -1,0 +1,4 @@
+%span.label-row
+  = link_to_label(label)
+  %span.prepend-left-10
+    = markdown(label.description, pipeline: :single_line)
