@@ -1,0 +1,5 @@
+class AddDescriptionToLabel < ActiveRecord::Migration
+  def change
+    add_column :labels, :description, :string
+  end
+end
