@@ -73,6 +73,8 @@ v 8.5.0 (unreleased)
   - Make it possible to erase a build (trace, artifacts) using UI and API
   - Ability to revert changes from a Merge Request or Commit
   - Emoji comment on diffs are not award emoji
+  - Add label description (Nuttanart Pornprasitsakul)
+  - Show label row when filtering issues or merge requests by label (Nuttanart Pornprasitsakul)
 
 v 8.4.4
   - Update omniauth-saml gem to 1.4.2
